src/objects/Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Added_By__c</fullName>
        <label>Added By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Added__c</fullName>
        <label>Date Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mapping_Types__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mapping Types</label>
        <referenceTo>Mapping_Types__c</referenceTo>
        <relationshipLabel>Mappings</relationshipLabel>
        <relationshipName>Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SF_API_Name__c</fullName>
        <label>SF API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Field_Name__c</fullName>
        <label>SF Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Object_Name__c</fullName>
        <label>SF Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XTRAC_Field__c</fullName>
        <label>XTRAC Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mapping</label>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>